<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/btn_menu_featured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_featured"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_apartment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_menu_apartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_apartment"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_accessories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_featured" />

    <Button
        android:id="@+id/btn_menu_accessories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_accessories"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_shoes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_apartment" />

    <Button
        android:id="@+id/btn_menu_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_shoes"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_tops"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_accessories" />

    <Button
        android:id="@+id/btn_menu_tops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_tops"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_bottoms"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_shoes" />

    <Button
        android:id="@+id/btn_menu_bottoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_bottoms"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_dresses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_tops" />

    <Button
        android:id="@+id/btn_menu_dresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_dresses"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_bottoms" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="27dp"
        android:layout_marginTop="27dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_my_account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/btn_menu_dresses"
        app:layout_constraintRight_toRightOf="@id/btn_menu_dresses"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_dresses" />

    <Button
        android:id="@+id/btn_menu_my_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple"
        android:text="@string/menu_my_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</android.support.constraint.ConstraintLayout>